[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/TitleUI.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/theme.tres" type="Theme" id=5]

[node name="TitleUI" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 632.0
margin_top = 352.0
margin_right = 648.0
margin_bottom = 368.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 304.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Minieval"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 45.0
margin_top = 80.0
margin_right = 203.0
margin_bottom = 264.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_constants/separation = 16

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 34.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 209.919, -24.398 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Play"

[node name="CustomGameButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 158.0
margin_bottom = 84.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 209.919, -24.398 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Custom Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 158.0
margin_bottom = 134.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 158.0
margin_bottom = 184.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/CustomGameButton" to="." method="_on_CustomGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
